--- a/package.json
+++ b/package.json
@@ -85,29 +85,21 @@
     "ionic-plugin-keyboard",
     "cordova-plugin-network-information",
     "cordova-plugin-secure-storage",
-    "de.appplant.cordova.plugin.local-notification",
     "cordova-open-native-settings",
-    "cordova-plugin-vibration",
-    "phonegap-plugin-push",
-    {
-      "locator": "phonegap-plugin-push"
-    }
+    "cordova-plugin-vibration"
   ],
   "dependencies": {
-    "@agm/core": "^1.0.0-beta.0",
-    "@angular/animations": "^4.2.6",
-    "@angular/common": "^4.2.6",
-    "@angular/compiler": "^4.2.6",
-    "@angular/compiler-cli": "^4.2.6",
-    "@angular/core": "^4.2.6",
-    "@angular/forms": "^4.2.6",
-    "@angular/http": "^4.2.6",
-    "@angular/platform-browser": "^4.2.6",
-    "@angular/platform-browser-dynamic": "^4.2.6",
-    "@angular/platform-server": "^4.2.6",
+    "@angular/animations": "^5.2.8",
+    "@angular/common": "^5.2.8",
+    "@angular/compiler": "^5.2.8",
+    "@angular/compiler-cli": "^5.2.8",
+    "@angular/core": "^5.2.8",
+    "@angular/forms": "^5.2.8",
+    "@angular/http": "^5.2.8",
+    "@angular/platform-browser": "^5.2.8",
+    "@angular/platform-browser-dynamic": "^5.2.8",
+    "@angular/platform-server": "^5.2.8",
     "@angular/tsc-wrapped": "^4.2.6",
-    "@ionic-native/app-update": "^4.0.0",
-    "@ionic-native/app-version": "^4.0.0",
     "@ionic-native/background-geolocation": "^4.4.2",
     "@ionic-native/badge": "^4.0.0",
     "@ionic-native/camera": "^4.0.0",
@@ -115,13 +107,10 @@
     "@ionic-native/device": "^4.0.0",
     "@ionic-native/dialogs": "^4.0.0",
     "@ionic-native/geofence": "^4.0.0",
-    "@ionic-native/local-notifications": "^4.0.0",
     "@ionic-native/native-audio": "^4.0.0",
     "@ionic-native/native-storage": "^4.0.0",
     "@ionic-native/network": "^4.0.0",
     "@ionic-native/open-native-settings": "^4.5.2",
-    "@ionic-native/phonegap-local-notification": "^4.0.0",
-    "@ionic-native/push": "^4.5.3",
     "@ionic-native/secure-storage": "^4.0.0",
     "@ionic-native/splash-screen": "^4.0.0",
     "@ionic-native/status-bar": "4.0.0",
@@ -131,7 +120,6 @@
     "@ngx-translate/core": "^7.0.0",
     "@ngx-translate/http-loader": "^0.1.0",
     "ajv": "^5.2.2",
-    "angular2-google-maps": "^0.17.0",
     "async": "^2.5.0",
     "bignumber.js": "^6.0.0",
     "chart.js": "^2.7.1",
@@ -143,29 +131,26 @@
     "cordova-browser": "^5.0.3",
     "cordova-custom-config": "^5.0.2",
     "cordova-ios": "^4.5.4",
-    "cordova-open-native-settings": "^1.4.1",
+    "cordova-open-native-settings": "^1.5.0",
     "cordova-plugin-app-event": "^1.2.1",
-    "cordova-plugin-app-update": "^1.3.9",
+    "cordova-plugin-app-update": "^1.5.2",
     "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-appversion": "^1.0.0",
-    "cordova-plugin-badge": "^0.8.1",
-    "cordova-plugin-compat": "^1.1.0",
-    "cordova-plugin-console": "^1.0.7",
-    "cordova-plugin-device": "^1.1.6",
-    "cordova-plugin-dialogs": "^1.3.3",
+    "cordova-plugin-badge": "^0.8.7",
+    "cordova-plugin-console": "^1.1.0",
+    "cordova-plugin-device": "^1.1.7",
+    "cordova-plugin-dialogs": "^1.3.4",
     "cordova-plugin-mauron85-background-geolocation": "^2.3.3",
     "cordova-plugin-nativeaudio": "^3.0.9",
-    "cordova-plugin-nativestorage": "^2.2.2",
-    "cordova-plugin-network-information": "^1.3.3",
+    "cordova-plugin-nativestorage": "^2.3.1",
+    "cordova-plugin-network-information": "^1.3.4",
     "cordova-plugin-secure-storage": "^2.6.8",
     "cordova-plugin-spinner-dialog": "^1.3.1",
-    "cordova-plugin-splashscreen": "^4.0.3",
-    "cordova-plugin-sqlite-2": "^1.0.4",
-    "cordova-plugin-statusbar": "^2.2.3",
+    "cordova-plugin-splashscreen": "^4.1.0",
+    "cordova-plugin-statusbar": "^2.4.1",
     "cordova-plugin-uniquedeviceid": "^1.3.2",
     "cordova-plugin-vibration": "^3.0.1",
-    "cordova-plugin-whitelist": "^1.3.2",
-    "cordova-sqlite-ext": "^0.10.5",
+    "cordova-plugin-whitelist": "^1.3.3",
     "de.appplant.cordova.plugin.local-notification": "^0.8.5",
     "desktop": "^0.0.0",
     "file-saver": "^1.3.3",
@@ -179,7 +164,6 @@
     "json8-patch": "^0.4.1",
     "json8-pointer": "^0.7.1",
     "localforage": "^1.5.0",
-    "localforage-cordovasqlitedriver": "^1.6.0",
     "moment": "^2.19.4",
     "moment-parseformat": "^2.2.0",
     "moment-range": "^3.1.1",
@@ -190,7 +174,6 @@
     "moment-timezone": "^0.5.14",
     "object-keys": "^1.0.11",
     "pouchdb": "^6.4.3",
-    "pouchdb-adapter-cordova-sqlite": "^2.0.2",
     "pouchdb-all-dbs": "^1.0.2",
     "pouchdb-auth": "^4.0.0",
     "pouchdb-authentication": "^1.1.1",
@@ -216,7 +199,6 @@
   "devDependencies": {
     "@ionic/app-scripts": "^3.1.4",
     "@ionic/cli-plugin-proxy": "1.5.7",
-    "@typed/hashmap": "^1.0.1",
     "@types/cordova": "^0.0.34",
     "@types/moment-duration-format": "^2.2.0",
     "@types/moment-range": "^3.1.0",
@@ -240,7 +222,6 @@
   },
   "cordova": {
     "plugins": {
-      "cordova-plugin-sqlite-2": {},
       "cordova-plugin-secure-storage": {},
       "cordova-plugin-console": {},
       "cordova-plugin-device": {},
@@ -251,9 +232,7 @@
       "cordova-plugin-dialogs": {},
       "cordova-plugin-spinner-dialog": {},
       "cordova-plugin-network-information": {},
-      "de.appplant.cordova.plugin.local-notification": {},
       "cordova-plugin-uniquedeviceid": {},
-      "cordova-plugin-app-version": {},
       "cordova-plugin-nativeaudio": {},
       "cordova-plugin-app-update": {},
       "cordova-plugin-badge": {},
@@ -269,7 +248,9 @@
       },
       "cordova-open-native-settings": {},
       "cordova-plugin-vibration": {},
-      "cordova-custom-config": {}
+      "cordova-custom-config": {},
+      "de.appplant.cordova.plugin.local-notification": {},
+      "cordova-plugin-app-version": {}
     },
     "platforms": [
       "ios",
