--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "@angular/platform-browser-dynamic": "^5.2.8",
     "@angular/platform-server": "^5.2.8",
     "@angular/tsc-wrapped": "^4.2.6",
+    "@ionic-native/app-version": "^4.5.3",
     "@ionic-native/background-geolocation": "^4.4.2",
     "@ionic-native/badge": "^4.5.3",
     "@ionic-native/camera": "^4.5.3",
@@ -117,7 +118,7 @@
     "@ionic-native/unique-device-id": "^4.5.3",
     "@ionic-native/vibration": "^4.5.3",
     "@ionic/storage": "^2.0.1",
-    "@ngx-translate/core": "^7.0.0",
+    "@ngx-translate/core": "^9.1.1",
     "@ngx-translate/http-loader": "^0.1.0",
     "ajv": "^5.2.2",
     "async": "^2.5.0",
@@ -131,9 +132,7 @@
     "cordova-custom-config": "^5.0.2",
     "cordova-ios": "^4.5.4",
     "cordova-open-native-settings": "^1.5.0",
-    "cordova-plugin-app-update": "^1.5.2",
     "cordova-plugin-app-version": "^0.1.9",
-    "cordova-plugin-appversion": "^1.0.0",
     "cordova-plugin-badge": "^0.8.7",
     "cordova-plugin-camera": "^4.0.2",
     "cordova-plugin-compat": "^1.1.0",
@@ -151,6 +150,7 @@
     "cordova-plugin-uniquedeviceid": "^1.3.2",
     "cordova-plugin-vibration": "^3.0.1",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-sqlite-evcore-extbuild-free": "^0.9.3",
     "desktop": "^0.0.0",
     "file-saver": "^1.3.3",
     "intl": "^1.2.5",
@@ -173,6 +173,7 @@
     "moment-timezone": "^0.5.14",
     "object-keys": "^1.0.11",
     "pouchdb": "^6.4.3",
+    "pouchdb-adapter-cordova-sqlite": "^2.0.2",
     "pouchdb-all-dbs": "^1.0.2",
     "pouchdb-auth": "^4.0.0",
     "pouchdb-authentication": "^1.1.1",
@@ -185,7 +186,7 @@
     "pouchdb-upsert": "^2.2.0",
     "pouchdb-utils": "^6.4.3",
     "reflect-metadata": "^0.1.10",
-    "rxjs": "^5.4.2",
+    "rxjs": "^5.5.7",
     "sprintf-js": "^1.1.1",
     "sw-toolbox": "^3.6.0",
     "transform-pouch": "^1.1.3",
@@ -233,7 +234,6 @@
       "cordova-plugin-network-information": {},
       "cordova-plugin-uniquedeviceid": {},
       "cordova-plugin-nativeaudio": {},
-      "cordova-plugin-app-update": {},
       "cordova-plugin-badge": {},
       "cordova-plugin-nativestorage": {},
       "cordova-plugin-mauron85-background-geolocation": {
@@ -249,7 +249,8 @@
       "cordova-plugin-vibration": {},
       "cordova-custom-config": {},
       "cordova-plugin-app-version": {},
-      "cordova-plugin-camera": {}
+      "cordova-plugin-camera": {},
+      "cordova-sqlite-evcore-extbuild-free": {}
     },
     "platforms": []
   },
