--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "onsitex",
-  "version": "10.12.13",
+  "version": "10.12.14",
   "author": {
     "name": "Michael Bates",
     "email": "hachero@gmail.com",
@@ -105,8 +105,9 @@
     "@ionic-native/core": "^4.4.2",
     "@ionic-native/device": "^4.5.3",
     "@ionic-native/dialogs": "^4.0.0",
+    "@ionic-native/fingerprint-aio": "^4.5.3",
     "@ionic-native/native-audio": "^4.0.0",
-    "@ionic-native/native-storage": "^4.0.0",
+    "@ionic-native/native-storage": "^4.5.3",
     "@ionic-native/network": "^4.0.0",
     "@ionic-native/open-native-settings": "^4.5.2",
     "@ionic-native/secure-storage": "^4.0.0",
@@ -124,9 +125,24 @@
     "chartjs-plugin-datalabels": "^0.2.0",
     "chartjs-plugin-stacked100": "^0.4.4",
     "cordova": "^8.0.0",
+    "cordova-android": "^7.0.0",
     "cordova-browser": "^5.0.3",
     "cordova-ios": "4.5.4",
+    "cordova-open-native-settings": "^1.5.0",
+    "cordova-plugin-app-version": "^0.1.9",
+    "cordova-plugin-badge": "^0.8.7",
     "cordova-plugin-camera": "^4.0.2",
+    "cordova-plugin-device": "^2.0.1",
+    "cordova-plugin-dialogs": "^2.0.1",
+    "cordova-plugin-ionic-keyboard": "^2.0.5",
+    "cordova-plugin-nativeaudio": "^3.0.9",
+    "cordova-plugin-nativestorage": "^2.3.1",
+    "cordova-plugin-network-information": "^2.0.1",
+    "cordova-plugin-secure-storage": "^2.6.8",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.1",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-sqlite-evcore-extbuild-free": "^0.9.3",
     "desktop": "^0.0.0",
     "file-saver": "^1.3.3",
     "intl": "^1.2.5",
@@ -150,7 +166,6 @@
     "object-keys": "^1.0.11",
     "pouchdb": "^6.4.3",
     "pouchdb-adapter-cordova-sqlite": "^2.0.2",
-    "pouchdb-all-dbs": "^1.0.2",
     "pouchdb-auth": "^4.0.0",
     "pouchdb-authentication": "^1.1.1",
     "pouchdb-browser": "6.4.3",
@@ -174,7 +189,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "^3.1.4",
-    "@ionic/cli-plugin-proxy": "1.5.7",
+    "@ionic/cli-plugin-proxy": "1.5.8",
     "@types/cordova": "^0.0.34",
     "@types/moment-duration-format": "^2.2.0",
     "@types/moment-range": "^3.1.0",
@@ -182,7 +197,7 @@
     "@types/pouchdb-core": "^6.1.11",
     "@types/sprintf-js": "^1.1.0",
     "@types/uuid": "^3.4.3",
-    "ionic": "3.19.1",
+    "ionic": "3.20.0",
     "node-sass": "^4.5.3",
     "tslint": "^5.5.0",
     "tslint-eslint-rules": "^4.1.1",
@@ -197,8 +212,25 @@
     "ionic:serve": "ionic-app-scripts serve --dev"
   },
   "cordova": {
-    "plugins": {},
-    "platforms": []
+    "plugins": {
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-secure-storage": {},
+      "cordova-plugin-nativestorage": {},
+      "cordova-plugin-dialogs": {},
+      "cordova-plugin-app-version": {},
+      "cordova-plugin-network-information": {},
+      "cordova-plugin-nativeaudio": {},
+      "cordova-open-native-settings": {},
+      "cordova-plugin-badge": {},
+      "cordova-sqlite-evcore-extbuild-free": {}
+    },
+    "platforms": [
+      "android"
+    ]
   },
   "false": {}
 }
