--- a/package.json
+++ b/package.json
@@ -125,7 +125,7 @@
     "chartjs-plugin-datalabels": "^0.2.0",
     "chartjs-plugin-stacked100": "^0.4.4",
     "cordova": "^8.0.0",
-    "cordova-android": "^7.0.0",
+    "cordova-android": "6.4.0",
     "cordova-browser": "^5.0.3",
     "cordova-ios": "4.5.4",
     "cordova-open-native-settings": "^1.5.0",
@@ -141,6 +141,7 @@
     "cordova-plugin-secure-storage": "^2.6.8",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.1",
+    "cordova-plugin-vibration": "^3.0.1",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-evcore-extbuild-free": "^0.9.3",
     "desktop": "^0.0.0",
@@ -166,7 +167,6 @@
     "object-keys": "^1.0.11",
     "pouchdb": "^6.4.3",
     "pouchdb-adapter-cordova-sqlite": "^2.0.2",
-    "pouchdb-adapter-fruitdown": "^6.4.3",
     "pouchdb-auth": "^4.0.0",
     "pouchdb-authentication": "^1.1.1",
     "pouchdb-browser": "6.4.3",
@@ -227,11 +227,13 @@
       "cordova-plugin-nativeaudio": {},
       "cordova-open-native-settings": {},
       "cordova-plugin-badge": {},
-      "cordova-sqlite-evcore-extbuild-free": {}
+      "cordova-sqlite-evcore-extbuild-free": {},
+      "cordova-plugin-vibration": {},
+      "cordova-plugin-camera": {}
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   },
   "false": {}
