--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "@ionic-native/device": "^4.5.3",
     "@ionic-native/dialogs": "^4.0.0",
     "@ionic-native/fingerprint-aio": "^4.5.3",
+    "@ionic-native/keyboard": "^4.5.3",
     "@ionic-native/native-audio": "^4.0.0",
     "@ionic-native/native-storage": "^4.5.3",
     "@ionic-native/network": "^4.0.0",
@@ -113,7 +114,6 @@
     "@ionic-native/secure-storage": "^4.0.0",
     "@ionic-native/splash-screen": "^4.0.0",
     "@ionic-native/status-bar": "4.0.0",
-    "@ionic-native/unique-device-id": "^4.5.3",
     "@ionic-native/vibration": "^4.5.3",
     "@ionic/storage": "^2.1.3",
     "@ngx-translate/core": "^9.1.1",
@@ -134,7 +134,6 @@
     "cordova-plugin-camera": "^4.0.2",
     "cordova-plugin-device": "^2.0.1",
     "cordova-plugin-dialogs": "^2.0.1",
-    "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-nativeaudio": "^3.0.9",
     "cordova-plugin-nativestorage": "^2.3.1",
     "cordova-plugin-network-information": "^2.0.1",
@@ -148,6 +147,7 @@
     "file-saver": "^1.3.3",
     "intl": "^1.2.5",
     "ionic-angular": "^3.9.2",
+    "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "json5": "^0.5.1",
     "json5-loader": "^1.0.1",
@@ -217,7 +217,6 @@
       "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-secure-storage": {},
       "cordova-plugin-nativestorage": {},
@@ -229,7 +228,8 @@
       "cordova-plugin-badge": {},
       "cordova-sqlite-evcore-extbuild-free": {},
       "cordova-plugin-vibration": {},
-      "cordova-plugin-camera": {}
+      "cordova-plugin-camera": {},
+      "ionic-plugin-keyboard": {}
     },
     "platforms": [
       "ios",
